tests/istio_testcases/example_policies/online_boutique_multi_layer_from_live_cluster_test/onlineboutique-multi-layer-from-live-cluster-test-scheme.yaml
resourceList: onlineboutique-resources/

networkConfigList:
  - name: onlineboutique-resources
    resourceList:
      - onlineboutique-resources/
    networkPolicyList:
      - istio-gateways.yaml
      - network_policies.yaml
      - sidecars.yaml


queries:
  - name: connectivity-map-of-onlineboutique
    connectivityMap:
      - onlineboutique-resources
    expected: 0
    expectedOutput: connectivity_map_onlineboutique_multi_layer_from_live_cluster.txt
